tests/baselines/reference/importDeclRefereingExternalModuleWithNoResolve.errors.txt
==== tests/cases/compiler/importDeclRefereingExternalModuleWithNoResolve.ts (7 errors) ====
    import b = require("externalModule");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"externalModule"'.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2199: Import declaration cannot refer to external module reference when --noResolve option is set.
    declare module "m1" {
                   ~~~~
!!! error TS2195: Ambient external module declaration must be defined in global context.
        import im2 = require("externalModule");
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2071: Unable to resolve external module '"externalModule"'.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2072: Module cannot be aliased to a non-module type.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2199: Import declaration cannot refer to external module reference when --noResolve option is set.
    }
    